# avalon

./: CMakeLists.txt
public/avalon/: deck.hpp  def.hpp  game.hpp  role.hpp
public/avalon/game/: game_status.hpp  quest_failure_threshold.hpp  team_build.hpp  team_build_threshold.hpp
source/: role.cpp
test/: CMakeLists.txt  deck.cpp  game.cpp  role.cpp  team.cpp
